<?php

namespace App\computer;

/**
 * Class Laptop
 * @package App\computer
 */
class Laptop extends AbstractComputer
{

}