<?php

namespace App\computer\part;

/**
 * Class Cpu
 * @package App\computer\part
 */
class Cpu extends AbstractSpec
{

}