<?php

namespace App\computer\part;

/**
 * Class MotherBoard
 * @package App\computer\part
 */
class MotherBoard extends AbstractSpec
{

}