<?php

namespace App\computer\part;

/**
 * Class Ram
 * @package App\computer\part
 */
class Ram extends AbstractSpec
{

}