<?php

namespace App\computer\part;

/**
 * Class Ssd
 * @package App\computer\part
 */
class Ssd extends AbstractSpec
{

}